change to english, etc

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
 
       <h3>Education</h3>
       <ul>
+        <li>Guest researcher at the Department of Perception and Cognition, 2022.11- (German Aerospace Center, DLR)</li>
         <li>Visiting Ph.D student in Robotics, Artificial Intelligence and Embedded Systems Laboratory, 2022.4- (Department of Informatics, Technical University of Munich)</li>
         <li>Ph.D student in Precision Engineering, 2020-Now (Graduate School of Engineering, The University of Tokyo)</li>
         <li>M.S. in Creative Informatics, 2018-2020 (Graduate School of Information Science and Technology, The University of Tokyo)</li>
@@ -57,7 +58,7 @@
 
       <h3>Skills</h3>
       <ul>
-        <li>Language: Japanese (native), English (intermediate)</li>
+        <li>Language: Japanese (native), English (professional)</li>
         <li>Programming language: C/C++, Python, MATLAB, Javascript, Ruby, HTML</li>
         <li>Software: OpenCV, OpenGL, CUDA, Linux(Ubuntu), PyTorch, ROS, Carla simulator, Inventor, Adobe Illustrator, AfterEffects</li>
         <li>Hardware: High-speed camera, Event-based camera, GPU, RealSense, MBED, rasberry pi, Arduino</li>
@@ -71,22 +72,23 @@
         <li><a href="static/Award_0925_1.pdf">優秀発表 企業賞, 2020.10</a></li>
         <li><a href="https://www.jsme.or.jp/archive/award/shou6-19.pdf">日本機械学会 若手優秀講演フェロー賞, 2020.6</a></li>
         <li>Best Student Paper Award, 2020 IEEE/SICE International Symposium on System Integration (SII2020), 2020.1</li>
-        <li>Research Fellowship for Young Scientists DC1, Japan Society for the Promotion of Science (JSPS), April (2020) – March (2023)</li>
+        <li>Research Fellowship for Young Scientists DC1, Japan Society for the Promotion of Science (JSPS), April (2020) – September (2023)</li>
         <li>The University of Tokyo Program for Leading Graduate Schools, Graduate Program for Social ICT Global Creative Leaders, 2019.4</li>
         <li>31st International Symposium on Space Technology and Science(ISTS) SPSS President Award, 2017.6</li>
       </ul>
 
 
       <div class="title" id="pubs"> Publications </div>
-      <h3>Papers</h3>
+      <h3>Journal Papers</h3>
       <ol>
-        <li>速水 桃子, 伊賀上 卓也, <u><b>井倉 幹大</b></u>, 樋口 寛, ルイ笠原 純ユネス, 伊藤 哲, 谷口 信博, 森野 弘之, 吉田 健一, 淺間 一, 山下 淳:
-          "クロスラインレーザとカメラを併用したロックボルト孔の位置および方向計測"
-          精密工学会誌, Vol. 89, 2023.
+        <li>Toko Hayamizu, Takuya Igaue, <u><b>Mikihiro Ikura</b></u>, Hiroshi Higuchi, Jun Younes Louhi Kasahara, Satoshi Ito, Nobuhiro Taniguchi, Hiroyuki Morino, Kenichi Yoshida, Hajime Asama, Atsushi Yamashita:
+          "Position and Direction Measurement of Rock Bolt Hole Using Cross Line Laser and Camera"
+          Journal of the Japan Society for Precision Engineering, Vol. 89, No. 4, pp. 328-335, 2023.
+          <a href="https://doi.org/10.2493/jjspe.89.328">https://doi.org/10.2493/jjspe.89.328</a>
         </li><br>
-        <li><u><b>井倉 幹大</b></u>, 宮下 令央, 山下 淳, 石川 正俊, 淺間 一:
-          "高速点滅LED マーカと複数のRGB-D センサを用いた遮蔽領域を提示可能な任意視点重畳映像生成システム"
-          精密工学会誌, Vol. 88, No.3, March 2022.
+        <li><u><b>Mikihiro Ikura</b></u>, Leo Miyashita, Atsushi Yamashita, Masatoshi Ishikawa, Hajime Asama:
+          "Occlusion-Free Video Superimposing System from Arbitrary Viewpoint Using a High-Speed Blinking LED Markers and Multiple RGB-D Sensors"
+          Journal of the Japan Society for Precision Engineering, Vol. 88, No.3, March 2022.
           <a href="https://doi.org/10.2493/jjspe.88.282">https://doi.org/10.2493/jjspe.88.282</a>
         </li><br>
         <li><b><u>Mikihiro Ikura</u></b>, Sarthak Pathak, Jun Younes Louhi Kasahara, Atsushi Yamashita, Hajime Asama: 
@@ -95,9 +97,9 @@
           Sensors, Vol. 21, No. 21, pp.1-18, 2021.
           <a href="https://doi.org/10.3390/s21216975">https://doi.org/10.3390/s21216975</a>
         </li><br>
-        <li>伊賀上 卓也, 樋口 寛, <u><b>井倉幹大</b></u>, 吉田 健一, 伊藤 哲, 谷口 信博, 山下 淳, 淺間 一:
-          "リングレーザ照射光の2D-3D マッチングに基づく光切断法によるトンネル内部の3 次元計測",
-          精密工学会誌, Vol. 87, No. 12, December 2021.
+        <li>Takuya Igaue, Hiroshi Higuchi, <u><b>Mikihiro Ikura</b></u>, Kenichi Yoshida, Satoshi Ito, Nobuhiro Taniguchi, Atsushi Yamashita, Hajime Asama:
+          "Line Structured Light-Based Tunnel 3D Measurement with 2D-3D Point Cloud Matching on Projected Light of Ring Laser",
+          Journal of the Japan Society for Precision Engineering, Vol. 87, No. 12, December 2021.
           <a href="https://doi.org/10.2493/jjspe.87.987">https://doi.org/10.2493/jjspe.87.987</a>
         </li><br>
         <li><b><u>Mikihiro Ikura</u></b>, Leo Miyashita, and Masatoshi Ishikawa:
@@ -125,7 +127,7 @@
         <li><b><u>Mikihiro Ikura</u></b>, Florian Walter, Alois Knoll:
           "Spiking Neural Networks for Robust and Efﬁcient Object Detection in
           Intelligent Transportation Systems With Roadside Event-Based Cameras"
-          IEEE Intelligent Vehicles Symposium 2023 (Accepted).
+          IEEE Intelligent Vehicles Symposium 2023, June 2023.
         </li><br>
         <li><b><u>Mikihiro Ikura</u></b>, Sarthak Pathak, Atsushi Yamashita, Hajime Asama: 
           "Polynomial-fitting Based Calibration for an Active 3D Sensing System Using Dynamic Light Section Method", 
