add doi, linkedin

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <title>Mikihiro Ikura</title>
     <link rel="stylesheet" type="text/css" href="m-ikura_style.css">
+    <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
   </head>
   <body>
     <!--<header>
@@ -27,18 +29,24 @@
         Graduate School of Engineering, <br>
         The University of Tokyo, Tokyo, Japan <br>
         <br>
-        Email: ikura(at)robot.t.u-tokyo.ac.jp <br>
+        <i class="far fa-envelope"></i>
+        ikura(at)robot.t.u-tokyo.ac.jp <br>
+        <i class="fa fa-home"></i>
+        <a href="https://mikihiroikura.github.io/">https://mikihiroikura.github.io/</a><br>
+        <i class="fa fa-linkedin"></i>
+        <a href="https://www.linkedin.com/in/mikihiro-ikura-7349b21ba/">https://www.linkedin.com/in/mikihiro-ikura/</a><br>
       </div>
       <p style="clear:both;"></p>
       <div class="title" id="bio"> Biography </div>
       Mikihiro Ikura is a Ph.D student in Graduate School of
-      Engineering, Department of Precision Engineering, the University of Tokyo.
+      Engineering, Department of Precision Engineering, the University of Tokyo,
+      and a visiting Ph.D student at Technical University of Munich.
       My major is high speed image processing, 3D sensing, and Robotics
       at Asama Yamashita Laboratory.
       In particular, my research is focused on an adaptive 3D sensing system 
       with adjustable spatio-temporal resolution and measurement in real time, 
-      and a real-time landing gear control system for UAV safe landing
-      on an unknown and unstable ground.
+      a real-time video superimposition with cooperative teleoperated robots,
+      and robust and efficient vehicle detection in Intelligent Transportation Systems.
       <h3>Interests</h3>
       <ul>
         <li>Robotics, Computer Vision</li>
@@ -64,23 +72,31 @@
         <li>Hardware: High-speed camera, Event-based camera, GPU, RealSense, MBED, rasberry pi, Arduino</li>
       </ul>
 
-      <h3>Scholarship & Awards</h3>
+      <h3>Scholarship</h3>
       <ul>
         <li><a href="https://www.satomi-s.or.jp/">Satomi Scholarship</a>, The Satomi Scholarship Foundation, October (2022) – March (2023)</li>
         <li><a href="https://www.jsps.go.jp/english/e-abc/index.html">Overseas Challenge Program for Young Researchers</a>, Japan Society for the Promotion of Science (JSPS), April (2022) – September (2022)</li>
+        <li>Research Fellowship for Young Scientists DC1, Japan Society for the Promotion of Science (JSPS), April (2020) – September (2023)</li>
+        <li>The University of Tokyo Program for Leading Graduate Schools, Graduate Program for Social ICT Global Creative Leaders, 2019.4</li>
+      </ul>
+
+      <h3>Awards</h3>
+      <ul>
         <li><a href="static/SSUP_Award.jpg">奨励賞, 2020年度 Sensing Solution 大学共同研究プログラム(SSUP)研究成果発表会, 2021.03</a></li>
         <li><a href="static/Award_0925_1.pdf">優秀発表 企業賞, 2020.10</a></li>
         <li><a href="https://www.jsme.or.jp/archive/award/shou6-19.pdf">日本機械学会 若手優秀講演フェロー賞, 2020.6</a></li>
         <li>Best Student Paper Award, 2020 IEEE/SICE International Symposium on System Integration (SII2020), 2020.1</li>
-        <li>Research Fellowship for Young Scientists DC1, Japan Society for the Promotion of Science (JSPS), April (2020) – September (2023)</li>
-        <li>The University of Tokyo Program for Leading Graduate Schools, Graduate Program for Social ICT Global Creative Leaders, 2019.4</li>
         <li>31st International Symposium on Space Technology and Science(ISTS) SPSS President Award, 2017.6</li>
       </ul>
-
 
       <div class="title" id="pubs"> Publications </div>
       <h3>Journal Papers</h3>
       <ol>
+        <li>Takuya Igaue, Toko Hayamizu, Hiroshi Higuchi, <u><b>Mikihiro Ikura</b></u>,
+          Kenichi Yoshida, Satoshi Yamanaka, Takashi Yamaguchi, Hajime Asama and Atsushi Yamashita:
+          "Cooperative 3D Tunnel Measurement Based on 2D-3D Registration of Omnidirectional Laser Light",
+          Journal of Field Robotics, 2023. (Accepted)
+        </li><br>
         <li>Toko Hayamizu, Takuya Igaue, <u><b>Mikihiro Ikura</b></u>, Hiroshi Higuchi, Jun Younes Louhi Kasahara, Satoshi Ito, Nobuhiro Taniguchi, Hiroyuki Morino, Kenichi Yoshida, Hajime Asama, Atsushi Yamashita:
           "Position and Direction Measurement of Rock Bolt Hole Using Cross Line Laser and Camera"
           Journal of the Japan Society for Precision Engineering, Vol. 89, No. 4, pp. 328-335, 2023.
@@ -128,6 +144,7 @@
           "Spiking Neural Networks for Robust and Efﬁcient Object Detection in
           Intelligent Transportation Systems With Roadside Event-Based Cameras"
           IEEE Intelligent Vehicles Symposium 2023, June 2023.
+          <a href="https://doi.org/10.1109/IV55152.2023.10186751">https://doi.org/10.1109/IV55152.2023.10186751</a>
         </li><br>
         <li><b><u>Mikihiro Ikura</u></b>, Sarthak Pathak, Atsushi Yamashita, Hajime Asama: 
           "Polynomial-fitting Based Calibration for an Active 3D Sensing System Using Dynamic Light Section Method", 
