--- a/index.html
+++ b/index.html
@@ -64,6 +64,16 @@
         <li>B.E. in Aeronautics and Astronautics, 2013-2018 (Faculty of Engineering, The University of Tokyo)</li>
       </ul>
 
+      <h3>Theses</h3>
+      <ul>
+        <li>Mikihiro Ikura, "Robust Visual Sensing Systems against Fast and Adverse Environments
+          Using High-speed and Event-based Cameras", PhD thesis, The University of Tokyo, July 2023. (Supervisor: Prof. Atsushi Yamashita)</li>
+        <li>Mikihiro Ikura, "Real-time Landing Gear Control System
+          Based on Adaptive 3D Sensing for UAV Safe Landing on Rough Ground", Master thesis, The University of Tokyo, January 2020. (Supervisor: Masatoshi Ishikawa)</li>
+        <li>Mikihiro Ikura, "Estimation Algorithm of Relative Position and Attitude during Proximity Rendezvous and Docking
+          Using Multiple Ultra-Wide-Band Devices", Bachelor thesis, The University of Tokyo, March 2018. (Supervisor: Shinichi Nakasuka)</li>
+      </ul>
+
       <h3>Skills</h3>
       <ul>
         <li>Language: Japanese (native), English (professional)</li>
@@ -72,7 +82,7 @@
         <li>Hardware: High-speed camera, Event-based camera, GPU, RealSense, MBED, rasberry pi, Arduino</li>
       </ul>
 
-      <h3>Scholarship</h3>
+      <h3>Scholarships</h3>
       <ul>
         <li><a href="https://www.satomi-s.or.jp/">Satomi Scholarship</a>, The Satomi Scholarship Foundation, October (2022) – March (2023)</li>
         <li><a href="https://www.jsps.go.jp/english/e-abc/index.html">Overseas Challenge Program for Young Researchers</a>, Japan Society for the Promotion of Science (JSPS), April (2022) – September (2022)</li>
