--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
         <li>Mikihiro Ikura, "Robust Visual Sensing Systems against Fast and Adverse Environments
           Using High-speed and Event-based Cameras", PhD thesis, The University of Tokyo, July 2023. (Supervisor: Prof. Atsushi Yamashita)</li>
         <li>Mikihiro Ikura, "Real-time Landing Gear Control System
-          Based on Adaptive 3D Sensing for UAV Safe Landing on Rough Ground", Master thesis, The University of Tokyo, January 2020. (Supervisor: Masatoshi Ishikawa)</li>
+          Based on Adaptive 3D Sensing for UAV Safe Landing on Rough Ground", Master thesis, The University of Tokyo, January 2020. (Supervisor: Prof. Masatoshi Ishikawa)</li>
         <li>Mikihiro Ikura, "Estimation Algorithm of Relative Position and Attitude during Proximity Rendezvous and Docking
-          Using Multiple Ultra-Wide-Band Devices", Bachelor thesis, The University of Tokyo, March 2018. (Supervisor: Shinichi Nakasuka)</li>
+          Using Multiple Ultra-Wide-Band Devices", Bachelor thesis, The University of Tokyo, March 2018. (Supervisor: Prof. Shinichi Nakasuka)</li>
       </ul>
 
       <h3>Skills</h3>
