--- a/index.html
+++ b/index.html
@@ -105,7 +105,8 @@
         <li>Takuya Igaue, Toko Hayamizu, Hiroshi Higuchi, <u><b>Mikihiro Ikura</b></u>,
           Kenichi Yoshida, Satoshi Yamanaka, Takashi Yamaguchi, Hajime Asama and Atsushi Yamashita:
           "Cooperative 3D Tunnel Measurement Based on 2D-3D Registration of Omnidirectional Laser Light",
-          Journal of Field Robotics, 2023. (Accepted)
+          Journal of Field Robotics, 2023.
+          <a href="http://doi.org/10.1002/rob.22241">http://doi.org/10.1002/rob.22241</a>
         </li><br>
         <li>Toko Hayamizu, Takuya Igaue, <u><b>Mikihiro Ikura</b></u>, Hiroshi Higuchi, Jun Younes Louhi Kasahara, Satoshi Ito, Nobuhiro Taniguchi, Hiroyuki Morino, Kenichi Yoshida, Hajime Asama, Atsushi Yamashita:
           "Position and Direction Measurement of Rock Bolt Hole Using Cross Line Laser and Camera"
