update from postdoc

--- a/index.html
+++ b/index.html
@@ -23,11 +23,12 @@
         <img src="imgs/mikura_githubio.jpg" width="300px" />
       </div>
       <div class="intro">
-        <h1>Mikihiro Ikura</h1>
-        <h2>Ph.D Student</h2>
-        Department of Precision Engineering, <br>
-        Graduate School of Engineering, <br>
-        The University of Tokyo, Tokyo, Japan <br>
+        <h1>Mikihiro Ikura (PhD)</h1>
+        <h2>Project Researcher / Engineer</h2>
+        Department of Human and Engineered Environmental Studies, <br>
+        Graduate School of Frontier Sciences, <br>
+        The University of Tokyo, Japan <br>
+        Computer Vision Engineer, Softroid inc. <br>
         <br>
         <i class="far fa-envelope"></i>
         ikura(at)robot.t.u-tokyo.ac.jp <br>
@@ -38,27 +39,32 @@
       </div>
       <p style="clear:both;"></p>
       <div class="title" id="bio"> Biography </div>
-      Mikihiro Ikura is a Ph.D student in Graduate School of
-      Engineering, Department of Precision Engineering, the University of Tokyo,
-      and a visiting Ph.D student at Technical University of Munich.
+      Mikihiro Ikura (Ph.D.) is a project researcher in Department of Human and Engineered Environmental Studies,
+      Graduate School of Frontier Sciences,
+      The University of Tokyo,
+      and a Computer Vision engineer at a Japanese startup company called Softroid inc.
       My major is high speed image processing, 3D sensing, and Robotics
-      at Asama Yamashita Laboratory.
-      In particular, my research is focused on an adaptive 3D sensing system 
+      at Real World Robot Informatics Laboratory.
+      In particular, my research focused on an adaptive 3D sensing system 
       with adjustable spatio-temporal resolution and measurement in real time, 
       a real-time video superimposition with cooperative teleoperated robots,
       and robust and efficient vehicle detection in Intelligent Transportation Systems.
+      During my Ph.D course, I stayed at Technical University of Munich and German Aerospace Center
+      to engage in the research related to event-based cameras and spiking neural networks.
       <h3>Interests</h3>
       <ul>
         <li>Robotics, Computer Vision</li>
         <li>High-speed 3D sensing system for robotics</li>
+        <li>Event-based processing and Spiking Neural Networks</li>
         <li>Autonomous safe landing system for UAV</li>
         <li>Rendezvous and docking system for nano-spacecraft</li>
       </ul>
 
       <h3>Education</h3>
       <ul>
-        <li>Guest researcher at the Department of Perception and Cognition, 2022.11- (German Aerospace Center, DLR)</li>
-        <li>Visiting Ph.D student in Robotics, Artificial Intelligence and Embedded Systems Laboratory, 2022.4- (Department of Informatics, Technical University of Munich)</li>
+        <li>Project researcher at the Department of Human and Engineered Environmental Studies, 2023.10- (Graduate School of Frontier Sciences, The University of Tokyo)</li>
+        <li>Guest researcher at the Department of Perception and Cognition, 2022.11-2023.9 (German Aerospace Center, DLR)</li>
+        <li>Visiting Ph.D student in Robotics, Artificial Intelligence and Embedded Systems Laboratory, 2022.4-2023.9 (Department of Informatics, Technical University of Munich)</li>
         <li>Ph.D student in Precision Engineering, 2020-Now (Graduate School of Engineering, The University of Tokyo)</li>
         <li>M.S. in Creative Informatics, 2018-2020 (Graduate School of Information Science and Technology, The University of Tokyo)</li>
         <li>B.E. in Aeronautics and Astronautics, 2013-2018 (Faculty of Engineering, The University of Tokyo)</li>
@@ -84,6 +90,7 @@
 
       <h3>Scholarships</h3>
       <ul>
+        <li><a href="https://www.jsps.go.jp/english/e-ab/index.html">Overseas Research Fellowships Restart Research Abroad (RRA)</a>, Japan Society for the Promotion of Science (JSPS), April (2024) – March (2026)</li>
         <li><a href="https://www.satomi-s.or.jp/">Satomi Scholarship</a>, The Satomi Scholarship Foundation, October (2022) – March (2023)</li>
         <li><a href="https://www.jsps.go.jp/english/e-abc/index.html">Overseas Challenge Program for Young Researchers</a>, Japan Society for the Promotion of Science (JSPS), April (2022) – September (2022)</li>
         <li>Research Fellowship for Young Scientists DC1, Japan Society for the Promotion of Science (JSPS), April (2020) – September (2023)</li>
@@ -252,9 +259,16 @@
       <div class="title" id="works"> Works </div>
       <ol>
         <li>
+          <h3><a href="https://www.softroid.jp/">Softroid inc.</a></h3>
+          <ul>
+            <li>Computer Vision Engineer (2023.10 &mdash;)</li>
+            Visual SLAM with spherical cameras for underconstruction sites
+          </ul>
+        </li>
+        <li>
           <h3><a href="https://www.dlr.de/EN/Home/home_node.html">DLR, German Aerospace Center</a></h3>
           <ul>
-            <li>Internship as a guest researcher at the department of Perception and Cognition (2022.11 &mdash;)</li>
+            <li>Internship as a guest researcher at the department of Perception and Cognition (2022.11 &mdash; 2023.9)</li>
             Supervisor: Dr. Wolfgang Stürzl, Marcus Müller<br>
             Robust visual odometry with event-based cameras for MAV
           </ul>
@@ -262,7 +276,7 @@
         <li>
           <h3><a href="https://www.ce.cit.tum.de/en/air/home/">Robotics, Artificial Intelligence and Real-time Systems Lab.</a></h3>
           <ul>
-            <li>Visiting Ph.D student at Technical University of Munich (2022.4 &mdash;)</li>
+            <li>Visiting Ph.D student at Technical University of Munich (2022.4 &mdash; 2023.9)</li>
             Supervisor: Prof. Alois Knoll, Dr. Florian Walter<br>
             Object detection with Spiking Neural Network and Event-based camera in Adverse Environment
           </ul>
@@ -270,7 +284,7 @@
         <li>
           <h3><a href="https://www.docswell.com/s/niyalist/KY723Z-2022-05-21-164854">Ito Lab.</a></h3>
           <ul>
-            <li>Research Assistant (2022.10 &mdash;)</li>
+            <li>Research Assistant (2022.10 &mdash; 2023.9)</li>
             Computer Vision engineer <br>
             Supervisor: Dr. Masaki Ito <br>
             Work on object detection for vehicles in Intelligent Transportation System
