--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       with adjustable spatio-temporal resolution and measurement in real time, 
       a real-time video superimposition with cooperative teleoperated robots,
       and robust and efficient vehicle detection in Intelligent Transportation Systems.
-      During my Ph.D course, I stayed at Technical University of Munich and German Aerospace Center
+      During my Ph.D course, I stayed at Technical University of Munich and German Aerospace Center for 1.5 years
       to engage in the research related to event-based cameras and spiking neural networks.
       <h3>Interests</h3>
       <ul>
@@ -90,7 +90,7 @@
 
       <h3>Scholarships</h3>
       <ul>
-        <li><a href="https://www.jsps.go.jp/english/e-ab/index.html">Overseas Research Fellowships Restart Research Abroad (RRA)</a>, Japan Society for the Promotion of Science (JSPS), April (2024) – March (2026)</li>
+        <li><a href="https://www.jsps.go.jp/english/e-ab/index.html">Overseas Research Fellowships RRA</a>, Japan Society for the Promotion of Science (JSPS), April (2024) – March (2026)</li>
         <li><a href="https://www.satomi-s.or.jp/">Satomi Scholarship</a>, The Satomi Scholarship Foundation, October (2022) – March (2023)</li>
         <li><a href="https://www.jsps.go.jp/english/e-abc/index.html">Overseas Challenge Program for Young Researchers</a>, Japan Society for the Promotion of Science (JSPS), April (2022) – September (2022)</li>
         <li>Research Fellowship for Young Scientists DC1, Japan Society for the Promotion of Science (JSPS), April (2020) – September (2023)</li>
