change now and add iit

--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@
 
       <h3>Education</h3>
       <ul>
-        <li>Project researcher at the Department of Human and Engineered Environmental Studies, 2023.10- (Graduate School of Frontier Sciences, The University of Tokyo)</li>
+        <li>Project researcher at the Department of Human and Engineered Environmental Studies, 2023.10-Now (Graduate School of Frontier Sciences, The University of Tokyo)</li>
         <li>Guest researcher at the Department of Perception and Cognition, 2022.11-2023.9 (German Aerospace Center, DLR)</li>
         <li>Visiting Ph.D student in Robotics, Artificial Intelligence and Embedded Systems Laboratory, 2022.4-2023.9 (Department of Informatics, Technical University of Munich)</li>
-        <li>Ph.D student in Precision Engineering, 2020-Now (Graduate School of Engineering, The University of Tokyo)</li>
+        <li>Ph.D student in Precision Engineering, 2020-2023 (Graduate School of Engineering, The University of Tokyo)</li>
         <li>M.S. in Creative Informatics, 2018-2020 (Graduate School of Information Science and Technology, The University of Tokyo)</li>
         <li>B.E. in Aeronautics and Astronautics, 2013-2018 (Faculty of Engineering, The University of Tokyo)</li>
       </ul>
@@ -91,6 +91,8 @@
       <h3>Scholarships</h3>
       <ul>
         <li><a href="https://www.jsps.go.jp/english/e-ab/index.html">Overseas Research Fellowships RRA</a>, Japan Society for the Promotion of Science (JSPS), April (2024) – March (2026)</li>
+        Host researcher: Prof. Chiara Bartolozzi, Event Driven Perception for Robotics,<br>
+        Center for Robotics and Intelligent Systems, Italian Institute of Technology (IIT)
         <li><a href="https://www.satomi-s.or.jp/">Satomi Scholarship</a>, The Satomi Scholarship Foundation, October (2022) – March (2023)</li>
         <li><a href="https://www.jsps.go.jp/english/e-abc/index.html">Overseas Challenge Program for Young Researchers</a>, Japan Society for the Promotion of Science (JSPS), April (2022) – September (2022)</li>
         <li>Research Fellowship for Young Scientists DC1, Japan Society for the Promotion of Science (JSPS), April (2020) – September (2023)</li>
