--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
       <h3>Scholarships</h3>
       <ul>
-        <li><a href="https://www.jsps.go.jp/english/e-ab/index.html">Overseas Research Fellowships RRA</a>, Japan Society for the Promotion of Science (JSPS), April (2024) – March (2026)</li>
+        <li><a href="https://www.jsps.go.jp/english/e-ab/index.html">Overseas Research Fellowships</a>, Japan Society for the Promotion of Science (JSPS), April (2024) – March (2026)</li>
         Host researcher: Prof. Chiara Bartolozzi, Event Driven Perception for Robotics,<br>
         Center for Robotics and Intelligent Systems, Italian Institute of Technology (IIT)
         <li><a href="https://www.satomi-s.or.jp/">Satomi Scholarship</a>, The Satomi Scholarship Foundation, October (2022) – March (2023)</li>
