update cv in pdf

--- a/index.html
+++ b/index.html
@@ -263,8 +263,8 @@
         <li>
           <h3><a href="https://www.softroid.jp/">Softroid inc.</a></h3>
           <ul>
-            <li>Computer Vision Engineer (2023.10 &mdash;)</li>
-            Visual SLAM with spherical cameras for underconstruction sites
+            <li>Computer Vision Engineer (2023.10 &mdash; Now)</li>
+            Visual SLAM with spherical cameras for construction sites
           </ul>
         </li>
         <li>
