--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
       <ul>
         <li>Language: Japanese (native), English (professional)</li>
         <li>Programming language: C/C++, Python, MATLAB, Javascript, Ruby, HTML</li>
-        <li>Software: OpenCV, OpenGL, CUDA, Linux(Ubuntu), Git, Docker, PyTorch, ROS, Carla simulator, Open3D, Inventor, Adobe Illustrator, AfterEffects</li>
+        <li>Software: OpenCV, OpenGL, CUDA, Linux(Ubuntu), Git, Docker, PyTorch, ROS, Carla simulator, Dagstar, Poetry, Open3D, Inventor, Adobe Illustrator, AfterEffects</li>
         <li>Hardware: High-speed camera, Event-based camera, GPU, RealSense, MBED, rasberry pi, Arduino</li>
       </ul>
 
