--- a/index.html
+++ b/index.html
@@ -84,13 +84,13 @@
       <ul>
         <li>Language: Japanese (native), English (professional)</li>
         <li>Programming language: C/C++, Python, MATLAB, Javascript, Ruby, HTML</li>
-        <li>Software: OpenCV, OpenGL, CUDA, Linux(Ubuntu), Git, Docker, PyTorch, ROS, Carla simulator, Open3D, OpenVSLAM, Dagstar, Poetry, Inventor, Adobe Illustrator, AfterEffects</li>
+        <li>Software: OpenCV, OpenGL, Linux(Ubuntu), Git, Github, Docker, PyTorch, ROS, Carla simulator, CUDA, Open3D, OpenVSLAM, Dagstar, Poetry, AWS, Inventor (CAD), Adobe Illustrator, AfterEffects</li>
         <li>Hardware: High-speed camera, Event-based camera, GPU, RealSense, MBED, rasberry pi, Arduino</li>
       </ul>
 
       <h3>Scholarships</h3>
       <ul>
-        <li><a href="https://www.jsps.go.jp/english/e-ab/index.html">Overseas Research Fellowships</a>, Japan Society for the Promotion of Science (JSPS), 2 years from April (2024)</li>
+        <li><a href="https://www.jsps.go.jp/english/e-ab/index.html">Overseas Research Fellowships</a>, Japan Society for the Promotion of Science (JSPS), 2 years from June (2024)</li>
         Host researcher: Prof. Chiara Bartolozzi, Event Driven Perception for Robotics,<br>
         Center for Robotics and Intelligent Systems, Italian Institute of Technology (IIT)
         <li><a href="https://www.satomi-s.or.jp/">Satomi Scholarship</a>, The Satomi Scholarship Foundation, October (2022) – March (2023)</li>
@@ -264,7 +264,8 @@
           <h3><a href="https://www.softroid.jp/">Softroid inc.</a></h3>
           <ul>
             <li>Computer Vision Engineer (2023.10 &mdash; Now)</li>
-            Visual SLAM with spherical cameras for construction sites
+            Visual SLAM with spherical cameras for construction sites<br>
+            Develop a python-based pipeline with VSLAM and image processing
           </ul>
         </li>
         <li>
