--- a/index.html
+++ b/index.html
@@ -24,11 +24,10 @@
       </div>
       <div class="intro">
         <h1>Mikihiro Ikura (PhD)</h1>
-        <h2>Project Researcher / Engineer</h2>
-        Department of Human and Engineered Environmental Studies, <br>
-        Graduate School of Frontier Sciences, <br>
-        The University of Tokyo, Japan <br>
-        Computer Vision Engineer, Softroid inc. <br>
+        <h2>Postdoc researcher</h2>
+        Event-Driven Preception for Robotics, <br>
+        Center for Robotics and Intelligent Systems, <br>
+        Italian Institute of Technology, Italy <br>
         <br>
         <i class="far fa-envelope"></i>
         ikura(at)robot.t.u-tokyo.ac.jp <br>
