--- a/index.html
+++ b/index.html
@@ -38,14 +38,12 @@
       </div>
       <p style="clear:both;"></p>
       <div class="title" id="bio"> Biography </div>
-      Mikihiro Ikura (Ph.D.) is a project researcher in Department of Human and Engineered Environmental Studies,
-      Graduate School of Frontier Sciences,
-      The University of Tokyo,
-      and a Computer Vision engineer at a Japanese startup company called Softroid inc.
-      My major is high speed image processing, 3D sensing, and Robotics
-      at Real World Robot Informatics Laboratory.
-      In particular, my research focused on an adaptive 3D sensing system 
-      with adjustable spatio-temporal resolution and measurement in real time, 
+      Mikihiro Ikura (Ph.D.) is a postdoctoral researcher in Event-Driven Perception for Robotics,
+      Center for Robotics and Intelligent Systems,
+      Italian Institute of Technology, Italy.
+      My major is high speed image processing with event-based cameras and high-speed cameras, 3D sensing, and Robotics.
+      In particular, my research focused on a real-time event-driven feature tracking, an adaptive 3D sensing system
+      with adjustable spatio-temporal resolution and measurement in real time,
       a real-time video superimposition with cooperative teleoperated robots,
       and robust and efficient vehicle detection in Intelligent Transportation Systems.
       During my Ph.D course, I stayed at Technical University of Munich and German Aerospace Center for 1.5 years
@@ -61,7 +59,8 @@
 
       <h3>Education</h3>
       <ul>
-        <li>Project researcher at the Department of Human and Engineered Environmental Studies, 2023.10-Now (Graduate School of Frontier Sciences, The University of Tokyo)</li>
+        <li>Postdoctoral researcher at Event-Driven Preception for Robotics, 2024.6-Now (Center for Robotics and Intelligent Systems, Italian Institute of Technology)</li>
+        <li>Project researcher at the Department of Human and Engineered Environmental Studies, 2023.10-2024.5 (Graduate School of Frontier Sciences, The University of Tokyo)</li>
         <li>Guest researcher at the Department of Perception and Cognition, 2022.11-2023.9 (German Aerospace Center, DLR)</li>
         <li>Visiting Ph.D student in Robotics, Artificial Intelligence and Embedded Systems Laboratory, 2022.4-2023.9 (Department of Informatics, Technical University of Munich)</li>
         <li>Ph.D student in Precision Engineering, 2020-2023 (Graduate School of Engineering, The University of Tokyo)</li>
@@ -89,7 +88,7 @@
 
       <h3>Scholarships</h3>
       <ul>
-        <li><a href="https://www.jsps.go.jp/english/e-ab/index.html">Overseas Research Fellowships</a>, Japan Society for the Promotion of Science (JSPS), 2 years from June (2024)</li>
+        <li><a href="https://www.jsps.go.jp/english/e-ab/index.html">Overseas Research Fellowships</a>, Japan Society for the Promotion of Science (JSPS), June (2024) – May (2026)</li>
         Host researcher: Prof. Chiara Bartolozzi, Event Driven Perception for Robotics,<br>
         Center for Robotics and Intelligent Systems, Italian Institute of Technology (IIT)
         <li><a href="https://www.satomi-s.or.jp/">Satomi Scholarship</a>, The Satomi Scholarship Foundation, October (2022) – March (2023)</li>
@@ -262,7 +261,7 @@
         <li>
           <h3><a href="https://www.softroid.jp/">Softroid inc.</a></h3>
           <ul>
-            <li>Computer Vision Engineer (2023.10 &mdash; Now)</li>
+            <li>Computer Vision Engineer (2023.10 &mdash; 2024.5)</li>
             Visual SLAM with spherical cameras for construction sites<br>
             Develop a python-based pipeline with VSLAM and image processing
           </ul>
