--- a/index.html
+++ b/index.html
@@ -158,6 +158,11 @@
 
       <h3>International Conference</h3>
       <ol>
+        <li><b><u>Mikihiro Ikura</u></b>, Cedric Le Gentil, Marcus G. Müller,
+          Florian Schuler, Atsushi Yamashita and Wolfgang Stürzl:
+          "RATE: Real-time Asynchronous Feature Tracking with Event Cameras",
+          Proceedings of the 2024 IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS2024), Abu Dhabi (UAE), October 2024.
+        </li><br>
         <li><b><u>Mikihiro Ikura</u></b>, Florian Walter, Alois Knoll:
           "Spiking Neural Networks for Robust and Efﬁcient Object Detection in
           Intelligent Transportation Systems With Roadside Event-Based Cameras"
