--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         Italian Institute of Technology, Italy <br>
         <br>
         <i class="far fa-envelope"></i>
-        ikura(at)robot.t.u-tokyo.ac.jp <br>
+        mikihiro.ikura(at)iit.it <br>
         <i class="fa fa-home"></i>
         <a href="https://mikihiroikura.github.io/">https://mikihiroikura.github.io/</a><br>
         <i class="fa fa-linkedin"></i>
@@ -162,6 +162,7 @@
           Florian Schuler, Atsushi Yamashita and Wolfgang Stürzl:
           "RATE: Real-time Asynchronous Feature Tracking with Event Cameras",
           Proceedings of the 2024 IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS2024), Abu Dhabi (UAE), October 2024.
+          [<a href="https://github.com/mikihiroikura/RATE">Code</a>]
         </li><br>
         <li><b><u>Mikihiro Ikura</u></b>, Florian Walter, Alois Knoll:
           "Spiking Neural Networks for Robust and Efﬁcient Object Detection in
