add takura si2024 paper

--- a/index.html
+++ b/index.html
@@ -217,6 +217,8 @@
 
       <h3>Domestic Conference</h3>
       <ol>
+        <li>田倉 竜也, <b><u>井倉 幹大</u></b>, 安 琪, 山下 淳: "イベントカメラを用いた悪環境に対して頑健かつ相対速度に依存しない物体検出手法",
+          第25回計測自動制御学会システムインテグレーション部門講演会講演論文集 (SI2024), 盛岡, December 2024.</li><br>
         <li>速水 桃子, 伊賀上 卓也, <b><u>井倉 幹大</u></b>, 樋口 寛, ルイ笠原 純ユネス, 伊藤 哲, 谷口 信博,
           森野 弘之, 吉田 健一, 山下 淳, 淺間 一: "孔口の楕円近似に基づくカメラ画像を用いたロックボルト孔の位置および角度推定",
           動的画像処理実利用化ワークショップ2022講演論文集 (DIA2022), pp.18-23, March 2022.</li><br>
