--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
         mikihiro.ikura(at)iit.it <br>
         <i class="fa fa-home"></i>
         <a href="https://mikihiroikura.github.io/">https://mikihiroikura.github.io/</a><br>
+        <i class="fa fa-github"></i>
+        <a href="https://github.com/mikihiroikura">https://github.com/mikihiroikura</a><br>
         <i class="fa fa-linkedin"></i>
         <a href="https://www.linkedin.com/in/mikihiro-ikura-7349b21ba/">https://www.linkedin.com/in/mikihiro-ikura/</a><br>
       </div>
@@ -82,7 +84,7 @@
       <ul>
         <li>Language: Japanese (native), English (professional)</li>
         <li>Programming language: C/C++, Python, MATLAB, Javascript, Ruby, HTML</li>
-        <li>Software: OpenCV, OpenGL, Linux(Ubuntu), Git, Github, Docker, PyTorch, ROS, Carla simulator, CUDA, Open3D, OpenVSLAM, Dagstar, Poetry, AWS, Inventor (CAD), Adobe Illustrator, AfterEffects</li>
+        <li>Software: OpenCV, OpenGL, Linux(Ubuntu), Git, Github, Docker, PyTorch, ROS, Carla simulator, CUDA, Open3D, OpenVSLAM, Dagstar, Poetry, uv, AWS, Inventor (CAD), Adobe Illustrator, AfterEffects</li>
         <li>Hardware: High-speed camera, Event-based camera, GPU, RealSense, MBED, rasberry pi, Arduino</li>
       </ul>
 
@@ -162,6 +164,7 @@
           Florian Schuler, Atsushi Yamashita and Wolfgang Stürzl:
           "RATE: Real-time Asynchronous Feature Tracking with Event Cameras",
           Proceedings of the 2024 IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS2024), Abu Dhabi (UAE), October 2024.
+          <a href="https://doi.org/10.1109/IROS58592.2024.10802050">https://doi.org/10.1109/IROS58592.2024.10802050</a>
           [<a href="https://github.com/mikihiroikura/RATE">Code</a>]
         </li><br>
         <li><b><u>Mikihiro Ikura</u></b>, Florian Walter, Alois Knoll:
