--- a/index.html
+++ b/index.html
@@ -111,6 +111,10 @@
       <div class="title" id="pubs"> Publications </div>
       <h3>Journal Papers</h3>
       <ol>
+        <!-- <li>Jiahang Wu, <u><b>Mikihiro Ikura</b></u>, Luna Gava, Masayoshi Mizuno, Arren Glover, and Chiara Bartolozzi:
+          "A Lightweight Framework for Depth Estimation from Moving Stereo Event Cameras without Motion Cues",
+          IEEE Transaction on Robotics, 2025. (Submitted)
+        </li><br> -->
         <li>Takuya Igaue, Toko Hayamizu, Hiroshi Higuchi, <u><b>Mikihiro Ikura</b></u>,
           Kenichi Yoshida, Satoshi Yamanaka, Takashi Yamaguchi, Hajime Asama and Atsushi Yamashita:
           "Cooperative 3D Tunnel Measurement Based on 2D-3D Registration of Omnidirectional Laser Light",
@@ -160,6 +164,21 @@
 
       <h3>International Conference</h3>
       <ol>
+        <li><b><u>Mikihiro Ikura</u></b>, Arren Glover, Masayoshi Mizuno, and Chiara Bartolozzi:
+          "Lattice-allocated Real-time Line Segment Feature Detection and Tracking Using Only an Event-based Camera",
+          Proceedings of 2nd Workshop on NeVi2025, International Conference on Computer Vision (ICCV), 2025. (Accepted) <b><font color="red">Spotlight session</font></b>
+        </li><br>
+        <!-- <li>
+          Luna Gava, <b><u>Mikihiro Ikura</u></b>, Chiara Bartolozzi, Arren Glover:
+          "SCARF: A Set of Centre Active Receptive Fields for Velocity Invariant Event Representation",
+          Proceedings of Workshop on Neuromorphic Perception for Real World Robotics,
+          IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS), 2025. (Submitted)
+        </li><br>
+        <li>Jiahang Wu, <u><b>Mikihiro Ikura</b></u>, Luna Gava, Masayoshi Mizuno, Arren Glover, and Chiara Bartolozzi:
+          "A Lightweight Framework for Depth Estimation from Moving Stereo Event Cameras without Motion Cues",
+          Proceedings of Workshop on Neuromorphic Perception for Real World Robotics,
+          IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS), 2025. (Submitted)
+        </li><br> -->
         <li><b><u>Mikihiro Ikura</u></b>, Cedric Le Gentil, Marcus G. Müller,
           Florian Schuler, Atsushi Yamashita and Wolfgang Stürzl:
           "RATE: Real-time Asynchronous Feature Tracking with Event Cameras",
