add spotlight talk in neurobotics
Added 'Spotlight talk' indication for accepted papers.

--- a/index.html
+++ b/index.html
@@ -172,12 +172,12 @@
           Luna Gava, <b><u>Mikihiro Ikura</u></b>, Chiara Bartolozzi, Arren Glover:
           "SCARF: A Set of Centre Active Receptive Fields for Velocity Invariant Event Representation",
           Proceedings of Workshop on Neuromorphic Perception for Real World Robotics,
-          IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS), 2025. (Accepted)
+          IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS), 2025. (Accepted) <b><font color="red">Spotlight talk</font></b>
         </li><br>
         <li>Jiahang Wu, <u><b>Mikihiro Ikura</b></u>, Luna Gava, Masayoshi Mizuno, Arren Glover, and Chiara Bartolozzi:
           "A Lightweight Framework for Depth Estimation from Moving Stereo Event Cameras without Motion Cues",
           Proceedings of Workshop on Neuromorphic Perception for Real World Robotics,
-          IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS), 2025. (Accepted)
+          IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS), 2025. (Accepted) <b><font color="red">Spotlight talk</font></b>
         </li><br>
         <li><b><u>Mikihiro Ikura</u></b>, Cedric Le Gentil, Marcus G. Müller,
           Florian Schuler, Atsushi Yamashita and Wolfgang Stürzl:
