add arxiv link and github

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
       <ol>
         <li><b><u>Mikihiro Ikura</u></b>, Arren Glover, Masayoshi Mizuno, and Chiara Bartolozzi:
           "Lattice-allocated Real-time Line Segment Feature Detection and Tracking Using Only an Event-based Camera",
-          Proceedings of 2nd Workshop on NeVi2025, International Conference on Computer Vision (ICCV), 2025. (Accepted) <b><font color="red">Spotlight session</font></b>
+          Proceedings of 2nd Workshop on NeVi2025, International Conference on Computer Vision (ICCV), 2025. (Accepted) <a href="https://arxiv.org/abs/2510.06829">https://arxiv.org/abs/2510.06829</a> [<a href="https://github.com/event-driven-robotics/RT-EvLDT">Code</a>] <b><font color="red">Spotlight session</font></b>
         </li><br>
         <li>
           Luna Gava, <b><u>Mikihiro Ikura</u></b>, Chiara Bartolozzi, Arren Glover:
